--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Android-Project</string>
+    <string name="title_activity_add_friend">AddFriendActivity</string>
 </resources>
